--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "final_service.js",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "ejs": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
